# src/api_service/swagger/swagger.json
@@ -108,17 +108,35 @@
                         "name": "UserId",
                         "description": "The user id",
                         "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/.String"
-                        }
+                        "type": "integer",
+                        "format": "int64"
                     },
                     {
                         "in": "body",
                         "name": "EssayId",
                         "description": "The essay id",
                         "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/essay/article_comment_click": {
+            "post": {
+                "tags": [
+                    "essay"
+                ],
+                "description": "评论功能",
+                "operationId": "EssayController.Essay comment",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "The essay id",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.body"
+                            "$ref": "#/definitions/models.Comment"
                         }
                     }
                 ]
@@ -163,14 +181,43 @@
                         "name": "UserId",
                         "description": "The user id",
                         "required": true,
-                        "type": "string"
+                        "type": "integer",
+                        "format": "int64"
                     },
                     {
                         "in": "query",
-                        "name": "EsssayId",
+                        "name": "EssayId",
                         "description": "The essay id",
                         "required": true,
-                        "type": "string"
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            }
+        },
+        "/essay/comment_like_click": {
+            "get": {
+                "tags": [
+                    "essay"
+                ],
+                "description": "user like the  comment",
+                "operationId": "EssayController.CommentLike",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "UserId",
+                        "description": "The user id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "CommentId",
+                        "description": "The essay id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
                     }
                 ]
             }
@@ -211,6 +258,59 @@
                     },
                     "403": {
                         "description": "{string} \"num == 0\""
+                    }
+                }
+            }
+        },
+        "/essay/upload_article": {
+            "post": {
+                "tags": [
+                    "essay"
+                ],
+                "description": "post essay",
+                "operationId": "EssayController.upload essay",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "essay",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Essay"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ \"eid\":eid  }"
+                    }
+                }
+            }
+        },
+        "/essay/upload_picture": {
+            "post": {
+                "tags": [
+                    "essay"
+                ],
+                "description": "upload essay photo",
+                "operationId": "EssayController.Upload picture",
+                "parameters": [
+                    {
+                        "in": "form",
+                        "name": "picture_name",
+                        "description": "multipart/form-data; filename:picture_name",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/.form"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ \"result\":1 , \"message\":\"avatar url\" }"
+                    },
+                    "403": {
+                        "description": "{ \"result\":0, \"message\": \"upload failed\"}"
                     }
                 }
             }
@@ -261,6 +361,62 @@
                 "responses": {
                     "200": {
                         "description": "{string} delete success!"
+                    }
+                }
+            }
+        },
+        "/request/deal_request": {
+            "post": {
+                "tags": [
+                    "request"
+                ],
+                "description": "处理请求回调",
+                "operationId": "XwtRequestController.deal  request callback",
+                "responses": {
+                    "200": {
+                        "description": "{\"result\" : 1, \"message\":\"调用成功\"}"
+                    }
+                }
+            }
+        },
+        "/request/get_all_request": {
+            "get": {
+                "tags": [
+                    "request"
+                ],
+                "description": "得到所有没有处理过的请求",
+                "operationId": "XwtRequestController.get unused request",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/.XwtRequest"
+                        }
+                    }
+                }
+            }
+        },
+        "/request/post_request": {
+            "post": {
+                "tags": [
+                    "request"
+                ],
+                "description": "发送请求",
+                "operationId": "XwtRequestController.post request",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for request contennt",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Xwtrequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ \"result\":1 , \"message\":\"register success\" }"
                     }
                 }
             }
@@ -480,10 +636,7 @@
         ".EssayInformation": {
             "type": "object"
         },
-        ".String": {
-            "type": "object"
-        },
-        ".body": {
+        ".XwtRequest": {
             "type": "object"
         },
         ".form": {
@@ -538,6 +691,39 @@
                 }
             }
         },
+        "models.Comment": {
+            "title": "Comment",
+            "type": "object",
+            "properties": {
+                "CommentId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Content": {
+                    "type": "string"
+                },
+                "CreateTime": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "EssayId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "FromId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "PhraseNum": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ToId": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "models.Commodity": {
             "title": "Commodity",
             "type": "object",
@@ -580,6 +766,10 @@
                     "type": "string",
                     "format": "datetime"
                 },
+                "EssayCount": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "EssayId": {
                     "type": "integer",
                     "format": "int64"
@@ -606,6 +796,10 @@
                     "format": "int64"
                 },
                 "UserId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "WatchNum": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -658,6 +852,23 @@
                     "format": "int64"
                 },
                 "XwtPowerValue": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "models.Xwtrequest": {
+            "title": "Xwtrequest",
+            "type": "object",
+            "properties": {
+                "Content": {
+                    "type": "string"
+                },
+                "IsUsed": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "RequestId": {
                     "type": "integer",
                     "format": "int64"
                 }
